--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </head>
   <body>
     <main>
-      <h4>This is Rock-Paper-Scissors</h4>
+      <h4>This is Rock-Paper-Scissors v0.1 5 :43 update</h4>
       <h5 id="round" style="position: relative; width: 90px">
         <div id="R1"></div>
       </h5>
@@ -325,7 +325,7 @@
               document.getElementById("C1").style.backgroundColor = "green";
             }
           }
-        }, 10);
+        }, 3000);
         document.getElementById("R1").style.backgroundColor = "white";
         document.getElementById("round").innerHTML = `Round ${
           games - 2
