--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rock-Paper Scissors game v0.0</title>
     <style>
       .hands-img {
@@ -69,7 +69,7 @@
   </head>
   <body>
     <main>
-      <h4>This is Rock-Paper-Scissors v0.1 6 Am  1/1/2024 update</h4>
+      <h4>This is Rock-Paper-Scissors v0.1 6:20 Am  1/1/2024 update</h4>
       <h5 id="round" style="position: relative; width: 90px">
         <div id="R1"></div>
       </h5>
@@ -140,9 +140,9 @@
       let co = 0;
       const scissors = "scissors";
       let games = 3;
-      document.getElementById("hands1").addEventListener('touchstart',game);
-      document.getElementById("hands2").addEventListener('touchstart',game);
-      document.getElementById("hands3").addEventListener('touchstart',game);
+      document.getElementById("hands1").addEventListener('touchend',game);
+      document.getElementById("hands2").addEventListener('touchend',game);
+      document.getElementById("hands3").addEventListener('touchend',game);
       function game(event) {
         const max = 3;
 
